--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ a:active {
 
 
 body > header, body > footer {
-    background-color: #555555;
+    background-color: #8CC;
     height: 50px;
     padding: 20px;
     color: white;
@@ -53,4 +53,7 @@ aside {
 
 .aside-banner img {
     width: 90%;
+}
+.italic {
+    font-style: italic;
 }
